02-aplicacoes/wordpress/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  labels:
    name: wordpress-service
spec:
  selector:
    app: wordpress
  #type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
