02-aplicacoes/wordpress/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-wordpress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: wordpress.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress-service
          servicePort: 80
